--- a/java/pom.xml
+++ b/java/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
